--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/main.yml
 name: CI/CD Pipeline
 
 on:
@@ -8,30 +7,52 @@ on:
     branches: [ main ]
 
 jobs:
-  build_and_test:
+  test:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
-      - name: Run Tests
-        run: pytest --maxfail=1 --disable-warnings -q
-      - name: Build Docker Image
-        run: docker build -t weather-pipeline:latest -f docker/Dockerfile .
+    - uses: actions/checkout@v2
+    
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest pytest-cov
+        pip install -r requirements.txt
+    
+    - name: Run tests
+      run: |
+        pytest --cov=src tests/
+    
   deploy:
+    needs: test
     runs-on: ubuntu-latest
-    needs: build_and_test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-      # Example deployment step – customize with gcloud CLI commands and service account secrets.
-      - name: Deploy to Cloud Run (placeholder)
-        run: echo "Deploying to Cloud Run – configure gcloud CLI with authentication and target service."
+    - uses: actions/checkout@v2
+    
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v0
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        export_default_credentials: true
+    
+    - name: Deploy to App Engine
+      run: |
+        gcloud app deploy app.yaml --quiet
