--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 altair==5.5.0
 attrs==25.3.0
 blinker==1.9.0
+branca==0.8.1
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 contourpy==1.3.0
+coverage==7.8.0
 cycler==0.12.1
 exceptiongroup==1.2.2
+folium==0.19.5
 fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud-core==2.4.3
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
 idna==3.10
 importlib_resources==6.5.2
 iniconfig==2.1.0
@@ -26,24 +36,32 @@ numpy==2.0.2
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+plotly==6.0.1
 pluggy==1.5.0
+proto-plus==1.26.1
 protobuf==5.29.4
 py4j==0.10.9.7
 pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydeck==0.9.1
 pyparsing==3.2.3
 pyspark==3.5.5
 pytest==8.3.5
+pytest-cov==6.1.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
+rsa==4.9
 scikit-learn==1.6.1
 scipy==1.13.1
 six==1.17.0
 smmap==5.0.2
 streamlit==1.44.1
+streamlit_folium==0.24.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 toml==0.10.2
@@ -51,5 +69,6 @@ tomli==2.2.1
 tornado==6.4.2
 typing_extensions==4.13.1
 tzdata==2025.2
-urllib3==2.3.0
+urllib3==1.26.6
+xyzservices==2025.1.0
 zipp==3.21.0
