--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,7 @@ jobs:
       with:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         project_id: ${{ secrets.GCP_PROJECT_ID }}
+        weather_api_key: ${{ secrets.WEATHER_API_KEY }}
         export_default_credentials: true
     
     - name: Deploy to App Engine
