--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 altair==5.5.0
+appnope==0.1.4
+asttokens==3.0.0
 attrs==25.3.0
 blinker==1.9.0
 branca==0.8.1
@@ -6,10 +8,14 @@ cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+comm==0.2.2
 contourpy==1.3.0
 coverage==7.8.0
 cycler==0.12.1
+debugpy==1.8.13
+decorator==5.2.1
 exceptiongroup==1.2.2
+executing==2.2.0
 folium==0.19.5
 fonttools==4.57.0
 gitdb==4.0.12
@@ -22,29 +28,45 @@ google-crc32c==1.7.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.69.2
 idna==3.10
+importlib_metadata==8.6.1
 importlib_resources==6.5.2
 iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==8.18.1
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
 kiwisolver==1.4.7
 MarkupSafe==3.0.2
 matplotlib==3.9.4
+matplotlib-inline==0.1.7
 narwhals==1.34.0
+nest-asyncio==1.6.0
 numpy==2.0.2
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.1.0
+platformdirs==4.3.7
 plotly==6.0.1
 pluggy==1.5.0
+prompt_toolkit==3.0.50
 proto-plus==1.26.1
 protobuf==5.29.4
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py4j==0.10.9.7
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydeck==0.9.1
+Pygments==2.19.1
 pyparsing==3.2.3
 pyspark==3.5.5
 pytest==8.3.5
@@ -52,6 +74,7 @@ pytest-cov==6.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
+pyzmq==26.4.0
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
@@ -60,6 +83,7 @@ scikit-learn==1.6.1
 scipy==1.13.1
 six==1.17.0
 smmap==5.0.2
+stack-data==0.6.3
 streamlit==1.44.1
 streamlit_folium==0.24.0
 tenacity==9.1.2
@@ -67,8 +91,11 @@ threadpoolctl==3.6.0
 toml==0.10.2
 tomli==2.2.1
 tornado==6.4.2
+traitlets==5.14.3
 typing_extensions==4.13.1
 tzdata==2025.2
 urllib3==1.26.6
+watchdog==6.0.0
+wcwidth==0.2.13
 xyzservices==2025.1.0
 zipp==3.21.0
